--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,13 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: Use Node.js  10.x version 
+        uses: actions/setup-node@v1
+        with:
+          always-auth: true
+          registry-url: https://registry.npmjs.org
+          node-version: 10.x
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
